--- a/Models/Diffusion/2024.09.14_E1_TTS.md
+++ b/Models/Diffusion/2024.09.14_E1_TTS.md
@@ -39,24 +39,24 @@ Audio samples are available at [URL](https://e1tts.github.io/).
 
 <table><tr><td width="50%">
 
-Non-autoregressive (NAR) text-to-speech (TTS) models \cite{TTSSurvey} generate speech from text in parallel, synthesizing all speech units simultaneously.
+Non-autoregressive (NAR) text-to-speech (TTS) models [^01] generate speech from text in parallel, synthesizing all speech units simultaneously.
 This enables faster inference compared to autoregressive (AR) models, which generate speech one unit at a time.
-Most NAR TTS models incorporate duration predictors in their architecture and rely on alignment supervision~\cite{DeepVoice,FastPitch,FastSpeech}.
+Most NAR TTS models incorporate duration predictors in their architecture and rely on alignment supervision[^02], [^03], [^04].
 Monotonic alignments between input text and corresponding speech provide information about the number of speech units associated with each text unit, guiding the model during training.
 During inference, learned duration predictors estimate speech timing for each text unit.
 
-Several pioneering studies~\cite{VARA-TTS,Flow-TTS} have proposed implicit-duration non-autoregressive (ID-NAR) TTS models that eliminate the need for alignment supervision or explicit duration prediction.
+Several pioneering studies[^05], [^06] have proposed implicit-duration non-autoregressive (ID-NAR) TTS models that eliminate the need for alignment supervision or explicit duration prediction.
 These models learn to align text and speech units in an end-to-end fashion using attention mechanisms, implicitly generating text-to-speech alignment.
 
-Recently, several diffusion-based~\cite{ScoreSDE} ID-NAR TTS models~\cite{E3TTS,SimpleTTS2,SimpleSpeech,E2TTS,Seed-TTS,DiTToTTS,Mapache} have been proposed, demonstrating state-of-the-art naturalness and speaker similarity in zero-shot text-to-speech~\cite{YourTTS}.
+Recently, several diffusion-based[^07] ID-NAR TTS models[^08], [^09], [^10], [^11], [^12], [^13], [^14] have been proposed, demonstrating state-of-the-art naturalness and speaker similarity in zero-shot text-to-speech[^15].
 However, these models still require an iterative sampling procedure taking dozens of network evaluations to reach high synthesis quality.
-Diffusion distillation techniques~\cite{BlogDistillation} can be employed to reduce the number of network evaluations in sampling from diffusion models.
+Diffusion distillation techniques[^16] can be employed to reduce the number of network evaluations in sampling from diffusion models.
 Most distillation techniques are based on approximating the ODE sampling trajectories of the teacher model.
-For example, ProDiff~\cite{ProDiff} applied Progressive Distillation~\cite{ProgressiveDistillation}, CoMoSpeech~\cite{CoMoSpeech} and FlashSpeech~\cite{FlashSpeech} applied Consistency Distillation~\cite{ConsistencyModel}, and VoiceFlow~\cite{VoiceFlow} and ReFlow-TTS~\cite{ReFlowTTS} applied Rectified Flow~\cite{RectifiedFlow}.
-Recently, a different family of distillation methods was discovered~\cite{DiffInstruct,DMD2}, which directly approximates and minimizes various divergences between the generator's sample distribution and the data distribution.
-Compared to ODE trajectory-based methods, the student model can match or even outperform the diffusion teacher model~\cite{DMD2}, as the distilled one-step generator does not suffer from error accumulation in diffusion sampling.
+For example, ProDiff[^17] applied Progressive Distillation[^18], CoMoSpeech[^19] and FlashSpeech[^20] applied Consistency Distillation[^21], and VoiceFlow[^22] and ReFlow-TTS[^23] applied Rectified Flow[^24].
+Recently, a different family of distillation methods was discovered[^25], [^26], which directly approximates and minimizes various divergences between the generator's sample distribution and the data distribution.
+Compared to ODE trajectory-based methods, the student model can match or even outperform the diffusion teacher model[^26], as the distilled one-step generator does not suffer from error accumulation in diffusion sampling.
 
-In this work, we distill a diffusion-based ID-NAR TTS model into a one-step generator with recently proposed distribution matching distillation~\cite{DiffInstruct,DMD2} method.
+In this work, we distill a diffusion-based ID-NAR TTS model into a one-step generator with recently proposed distribution matching distillation[^25], [^26] method.
 The distilled model demonstrates better robustness after distillation, and it achieves comparable performance to several strong AR and NAR baseline systems.
 
 </td><td>
@@ -71,17 +71,17 @@ The distilled model demonstrates better robustness after distillation, and it ac
 
 Consider a data distribution $p(x)$ on $\R^d$.
 We can convolve the density $p(x)$ with a Gaussian perturbation kernel $q_t(x_t | x) = \mathcal{N}(x_t; \alpha_t x, \sigma_t^2 \mathbf{I}_d)$ to obtain the perturbed density $p_t(x_t) := \int p(x) q_t(x_t | x) \text{d} x$, where $\alpha_t, \sigma_t > 0$ define the signal-to-noise ratio at each time $t \in [0, 1]$.
-Various formulations of diffusion models exist in the literature~\cite{RectifiedFlow,ScoreSDE}, most of which are equivalent to learning a neural network that approximates the score function $s_p(x_t, t) :=\nabla_{x_t} \log p_{t}(x_t)$ at each time $t$.
+Various formulations of diffusion models exist in the literature[^24], [^07], most of which are equivalent to learning a neural network that approximates the score function $s_p(x_t, t) :=\nabla_{x_t} \log p_{t}(x_t)$ at each time $t$.
 
 Now, consider a generator function $g_\theta(z): \R^d \to \R^d$ that takes in random noise $Z \sim \mathcal{N}(0, \mathbf{I}_d)$ and outputs fake samples $\tilde{X} := g_\theta(Z)$ with distribution $q_\theta(x)$.
-Several studies~\cite{VSD,DiffInstruct} have discovered that if we can obtain the two score functions $s_p(x) := \nabla_x \log p(x)$ and $s_{q} (x) := \nabla_{x} \log q_\theta(x)$, we can compute the gradient of the following KL divergence:
+Several studies[^27], [^25] have discovered that if we can obtain the two score functions $s_p(x) := \nabla_x \log p(x)$ and $s_{q} (x) := \nabla_{x} \log q_\theta(x)$, we can compute the gradient of the following KL divergence:
 $$
 \nabla_\theta D_{KL}(q_\theta(x)\|p(x)) = E[(s_{q}(\tilde X) - s_p(\tilde X))\frac{\partial g_\theta(Z)}{\partial \theta}].
 $$
 
 However, obtaining $s_p(x)$ and $s_{q}(x)$ directly is challenging.
 Instead, we can train diffusion models to estimate the score functions $s_p(x_t, t)$ and $s_{q}(x_t, t)$ of the perturbed distributions $p_t(x_t)$ and $q_{\theta, t}(x_t) := \int q_\theta(x) q_t(x_t | x) \text{d} x$.
-Consider the following weighted average of KL divergence at all noise scales~\cite{DiffInstruct,VSD}:
+Consider the following weighted average of KL divergence at all noise scales[^25], [^27]:
 $$
 D_\theta := E_{t \sim p(t)} [w_t D_{KL}(q_{\theta, t}(x_t)\|p_t(x_t))],
 $$
@@ -97,11 +97,11 @@ Given a pretrained score estimator $s_\phi(x_t, t) \approx s_p(x_t, t)$, the pro
 
 > Algorithm.01
 
-Although the generator $g_\theta$ can be randomly initialized in theory, initializing $g_\theta$ with $s_\phi$ leads to faster convergence and better performance\cite{DiffInstruct}.
-Several studies~\cite{LCMLoRA,InnateOneStep} have discovered that pretrained diffusion models already possess latent one-step generation capabilities.
-Moreover, it is possible to convert them into one-step generators by tuning only a fraction of the parameters~\cite{LCMLoRA,InnateOneStep}, such as the normalization layers.
+Although the generator $g_\theta$ can be randomly initialized in theory, initializing $g_\theta$ with $s_\phi$ leads to faster convergence and better performance[^25].
+Several studies[^28], [^29] have discovered that pretrained diffusion models already possess latent one-step generation capabilities.
+Moreover, it is possible to convert them into one-step generators by tuning only a fraction of the parameters[^28], [^29], such as the normalization layers.
 
-While distribution matching distillation resembles generative adversarial networks (GANs)~\cite{GAN} in its requirement for alternating optimization, it has been empirically observed~\cite{DMD2} to be significantly more stable, requiring minimal tuning and avoiding the mode collapse issue that often hinders GAN training.
+While distribution matching distillation resembles generative adversarial networks (GANs)[^30] in its requirement for alternating optimization, it has been empirically observed[^26] to be significantly more stable, requiring minimal tuning and avoiding the mode collapse issue that often hinders GAN training.
 
 </td><td>
 
@@ -111,7 +111,7 @@ While distribution matching distillation resembles generative adversarial networ
 
 <table><tr><td width="50%">
 
-Rectified Flow~\cite{RectifiedFlow} is capable of constructing a neural ordinary differential equation (ODE):
+Rectified Flow[^24] is capable of constructing a neural ordinary differential equation (ODE):
 $$
 \text{d} Y_t = v(Y_t, t) \text{d} t, \quad t \in [0, 1],
 $$
@@ -139,10 +139,10 @@ Equation \ref{equ:svequ} allows us to apply DMD to Rectified Flow models.
 
 <table><tr><td width="50%">
 
-E1 TTS is a cascaded conditional generative model, taking the full text and partially masked speech as input, and outputs completed speech.
+***E1 TTS*** is a cascaded conditional generative model, taking the full text and partially masked speech as input, and outputs completed speech.
 The overall architecture is illustrated in Figure~\ref{fig:e1tts}.
-E1 TTS is similar to the acoustic model introduced in~\cite{ARDiT} with the modification that all speech tokens are generated simultaneously in the first stage.
-Further more, we applied DMD to convert the two diffusion transformers~(DiTs)~\cite{DiT} to one-step generators, removing all iterative sampling from the inference pipeline.
+***E1 TTS*** is similar to the acoustic model introduced in[^31] with the modification that all speech tokens are generated simultaneously in the first stage.
+Further more, we applied DMD to convert the two diffusion transformers~(DiTs)[^32] to one-step generators, removing all iterative sampling from the inference pipeline.
 We will describe the components in the system in the following sections.
 
 </td><td>
@@ -152,14 +152,14 @@ We will describe the components in the system in the following sections.
 
 ### The Mel Spectrogram Autoencoder
 
-Directly training generative models on low-level speech representations such as Mel spectrograms~\cite{E2TTS} and raw waveforms~\cite{E3TTS} is resource-consuming due to the long sequence lengths.
+Directly training generative models on low-level speech representations such as Mel spectrograms[^11] and raw waveforms[^08] is resource-consuming due to the long sequence lengths.
 We build a Mel spectrogram autoencoder with a Transformer encoder and a Diffusion Transformer decoder.
 The encoder takes log Mel spectrograms and outputs continuous tokens in $\R^{32}$ at a rate of approximately 24Hz.
 The decoder is a Rectified Flow model that takes speech tokens as input and outputs Mel spectrograms.
 The encoder and decoder are jointly trained with a diffusion loss and a KL loss to balance rate and distortion.
 The Mel spectrogram autoencoder is fine-tuned for the case where part of the spectrogram is known during synthesis to enhance its performance in speech inpainting.
 For the decoder, we appended layers of 2D convolutions after the transformer blocks to improve its performance on spectrograms.
-Please refer to~\cite{ARDiT} for further details regarding the training process and model architecture.
+Please refer to[^31] for further details regarding the training process and model architecture.
 
 </td><td>
 
@@ -173,13 +173,13 @@ During training, the sequence of speech tokens is randomly split into three part
 We first sample the length of the middle part uniformly, and then we sample the beginning position of the middle part uniformly.
 With 10\% probability we mask the entire speech token sequence.
 
-We adopted rotary positional embedding (RoPE)~\cite{Roformer} in all Transformer blocks in E1 TTS.
+We adopted rotary positional embedding (RoPE)[^33] in all Transformer blocks in ***E1 TTS***.
 For the Text-to-Token model, we designed the positional embedding to promote diagonal alignment between text and speech tokens, as illustrated in Figure~\ref{fig:posemb}.
 With RoPE, each token is associated with a position index, and the embeddings corresponding to the tokens are rotated by an angle proportional to their position index.
 For text tokens, we assign them increasing integer position indices.
 For speech tokens, we assign them fractional position indices, with an increment of $n_{\text{text}} / n_{\text{speech}}$.
 This design results in an initial attention pattern in the form of a diagonal line between text and speech.
-Similar designs have proven effective in other ID-NAR TTS models~\cite{ParaNet, VARA-TTS}.
+Similar designs have proven effective in other ID-NAR TTS models[^34], [^05].
 
 </td><td>
 
@@ -188,12 +188,12 @@ Similar designs have proven effective in other ID-NAR TTS models~\cite{ParaNet, 
 
 ### Duration Modeling
 
-Similar to most ID-NAR TTS models, E1 TTS requires the total duration of the speech to be provided during inference.
-We trained a duration predictor similar to the one in~\cite{VoiceBox}.
-The rough alignment between text and speech tokens is first obtained by training an aligner based on RAD-TTS~\cite{RAD-TTS}.
+Similar to most ID-NAR TTS models, ***E1 TTS*** requires the total duration of the speech to be provided during inference.
+We trained a duration predictor similar to the one in[^35].
+The rough alignment between text and speech tokens is first obtained by training an aligner based on RAD-TTS[^36].
 Then a regression-based duration model is trained to estimate partially masked durations.
 The duration model takes the full text (phoneme sequence in our case) and partially observed durations as input, then predicts unknown durations based on the context.
-We observed that minimizing the L1 difference in total duration~\cite{Flow-TTS,VARA-TTS} works better than directly minimizing phoneme-level durations, resulting in a lower total duration error.
+We observed that minimizing the L1 difference in total duration[^06], [^05] works better than directly minimizing phoneme-level durations, resulting in a lower total duration error.
 
 </td><td>
 
@@ -202,17 +202,17 @@ We observed that minimizing the L1 difference in total duration~\cite{Flow-TTS,V
 
 ### Inference
 
-The inference process for text-based speech editing~\cite{DiffVoice} with E1~TTS involves several steps.
+The inference process for text-based speech editing[^37] with E1~TTS involves several steps.
 First, the original text and speech are force-aligned to obtain the original phoneme durations.
 Next, the duration predictor is fed the target phoneme sequence and the original durations of unedited phonemes to estimate the total duration of the target speech.
 The original speech is then encoded into speech tokens, and the old tokens corresponding to the edited part are removed.
 New noise tokens are inserted to match the estimated target duration.
 Finally, the target text and partially masked target speech tokens are fed to the Text-to-Token DiT to obtain the reconstructed speech tokens, resulting in the edited speech output that matches the target text while preserving the original speech characteristics in the unedited parts.
-The procedure for zero-shot text-to-speech synthesis with E1 TTS works similarly.
+The procedure for zero-shot text-to-speech synthesis with ***E1 TTS*** works similarly.
 
 For simpler tasks such as single-speaker TTS with only text input, we can remove the force-alignment step and the duration predictor from the inference pipeline.
-In this case, the total duration of the synthesized speech can be estimated by assuming it is a fixed multiple of the input text length as done in~\cite{ParaNet}.
-Or we can train a total-duration predictor following~\cite{Flow-TTS,VARA-TTS}, which does not require text unit durations as supervision.
+In this case, the total duration of the synthesized speech can be estimated by assuming it is a fixed multiple of the input text length as done in[^34].
+Or we can train a total-duration predictor following[^06], [^05], which does not require text unit durations as supervision.
 
 </td><td>
 
@@ -222,12 +222,12 @@ Or we can train a total-duration predictor following~\cite{Flow-TTS,VARA-TTS}, w
 
 <table><tr><td width="50%">
 
-**Datasets**: All components of the evaluated E1 TTS model were trained on the LibriTTS~\cite{LibriTTS} dataset, which is a multi-speaker English speech corpus containing 585 hours of speech audio from over 2,300 speakers.
-We used an open-source BigVGAN~\cite{BigVGAN} checkpoint\footnote{\texttt{github.com/NVIDIA/BigVGAN}  \texttt{(bigvgan\_24khz\_100band)}} to generate 24 kHz speech waveforms from Mel spectrograms.
+**Datasets**: All components of the evaluated ***E1 TTS*** model were trained on the LibriTTS[^38] dataset, which is a multi-speaker English speech corpus containing 585 hours of speech audio from over 2,300 speakers.
+We used an open-source BigVGAN[^39] checkpoint\footnote{\texttt{github.com/NVIDIA/BigVGAN}  \texttt{(bigvgan\_24khz\_100band)}} to generate 24 kHz speech waveforms from Mel spectrograms.
 
 **Baselines**: We used the open-source StyleTTS~2\footnote{\texttt{github.com/yl4579/StyleTTS2 (StyleTTS2-LibriTTS)}} and CosyVoice\footnote{\texttt{github.com/FunAudioLLM/CosyVoice (CosyVoice-300M)}} as NAR and AR TTS baseline systems.
 We utilized their officially provided model weights and inference code for evaluation.
-Another baseline system is ARDiT-TTS$_\text{B=1, DMD}$ from~\cite{ARDiT}, which has a similar design and shares the Mel-to-Token encoder and Token-to-Mel decoder with E1 TTS.
+Another baseline system is ARDiT-TTS$_\text{B=1, DMD}$ from[^31], which has a similar design and shares the Mel-to-Token encoder and Token-to-Mel decoder with ***E1 TTS***.
 We also compare the distilled model E1~TTS$_\text{DMD}$ with E1~TTS$_\text{ODE}$.
 E1~TTS$_\text{ODE}$ directly samples the teacher diffusion model through ODE samplers.
 In ODE sampling, we take 128 Euler steps for the Text-to-Token DiT, and we take 32 steps for the Token-to-Mel DiT.
@@ -247,10 +247,10 @@ Our evaluation test set and source code can be found in the online supplement.
 
 We trained all models using the AdamW optimizer with $\beta_1 = 0.9$ and $\beta_2 = 0.95$, with a constant learning rate of 0.0001.
 For evaluation, we always use exponential moving averaged weights with a decay rate of 0.9999.
-The EMA rate has a significant impact on sample quality~\cite{EDM2}.
-For the DMD training of the DiT models, we adopted the two-timescale update rule~(TTUR)\cite{TTUR}.
+The EMA rate has a significant impact on sample quality[^40].
+For the DMD training of the DiT models, we adopted the two-timescale update rule~(TTUR)[^41].
 The generators are updated once per 10 updates of the score model.
-We observed that TTUR stabilized DMD training significantly as discovered in \cite{DMD2}.
+We observed that TTUR stabilized DMD training significantly as discovered in [^26].
 
 The Mel-to-Token Encoder was trained jointly with the Token-to-Mel DiT for 600k steps.
 Then the encoder was frozen, and we further trained the Text-to-Mel DiT decoder with DMD for 20k generator steps.
@@ -268,7 +268,7 @@ In all training stages, the batch sizes are dynamic and there are approximately 
 
 **Zero-Shot Text-to-Speech**
 
-Following the evaluation protocol in \cite{ARDiT,UniCATS}, we evaluate the zero-shot TTS performance of all models on {test set B}, derived from the {test-clean} subset of LibriTTS, containing 500 test cases.
+Following the evaluation protocol in [^31], [^42], we evaluate the zero-shot TTS performance of all models on {test set B}, derived from the {test-clean} subset of LibriTTS, containing 500 test cases.
 The test set includes 37 speech prompts from different speakers, each with a duration of approximately 3 seconds.
 We report the average WER and SECS of all 500 test cases.
 Note that the SECS scores here are computed between the models' outputs and the speech prompts.
@@ -298,8 +298,8 @@ E1~TTS$_\text{DMD}$ can achieve comparable performance as the strong baseline mo
 
 **Robustness to Different Speech Rate**
 
-To assess the robustness of E1 TTS to varying total durations, we measure the WER and SECS of zero-shot TTS results (as described in Section~\ref{sec:zstts}) while scaling the predicted duration by factors from 0.7 to 1.3.
-The results, shown in Figure \ref{fig:dur_robust}, demonstrate that E1 TTS can tolerate some error in total duration prediction.
+To assess the robustness of ***E1 TTS*** to varying total durations, we measure the WER and SECS of zero-shot TTS results (as described in Section~\ref{sec:zstts}) while scaling the predicted duration by factors from 0.7 to 1.3.
+The results, shown in Figure \ref{fig:dur_robust}, demonstrate that ***E1 TTS*** can tolerate some error in total duration prediction.
 
 </td><td>
 
@@ -308,8 +308,8 @@ The results, shown in Figure \ref{fig:dur_robust}, demonstrate that E1 TTS can t
 
 **Robustness to Hard Cases**
 
-We report the robustness of E1 TTS on challenging sentences containing difficult textual patterns for synthesis.
-We adopt the 100 hard sentences proposed in \cite{ELLAV} for evaluation.
+We report the robustness of ***E1 TTS*** on challenging sentences containing difficult textual patterns for synthesis.
+We adopt the 100 hard sentences proposed in [^43] for evaluation.
 For each utterance, we randomly sampled 3-second-long speech prompts from LibriTTS test-clean.
 The results can be found in Table \ref{table:hard_cases}.
 We were surprised that E1~TTS$_\text{DMD}$ even outperforms StyleTTS 2 on this task, since StyleTTS 2 includes a duration predictor and therefore should not make alignment mistakes.
@@ -324,7 +324,7 @@ We were surprised that E1~TTS$_\text{DMD}$ even outperforms StyleTTS 2 on this t
 Adversarial training is known to be prone to mode collapse, leading to reduced sample diversity.
 The reverse KL divergence employed in DMD is also a mode-seeking loss.
 Therefore, it is important to investigate whether E1~TTS suffers from mode-dropping.
-We generated 100 random samples from zero-shot TTS models using the same target text~\cite{VITS}, ``How much variation is there?'', and an identical speech prompt\footnote{\texttt{LibriTTS, test-clean, 8555\_284449\_000044\_000000}}.
+We generated 100 random samples from zero-shot TTS models using the same target text(**VITS**[^44]), "How much variation is there?", and an identical speech prompt\footnote{\texttt{LibriTTS, test-clean, 8555\_284449\_000044\_000000}}.
 We then computed the expected pairwise distances of MFCC and pitch \textit{sequences} between the generated samples.
 We applied dynamic time warping (DTW) to compute the distances.
 To measure duration variability, we estimated the phoneme durations using our RAD-TTS aligner and reported the expected pairwise Euclidean distance between the phoneme duration sequences.
@@ -343,11 +343,61 @@ In this study, we propose E1~TTS, an implicit-duration non-autoregressive (ID-NA
 Our experiments demonstrate that when trained on LibriTTS, E1~TTS can achieve comparable performance to strong NAR and AR baseline models.
 Despite relying only on implicit alignment and one-pass inference, E1~TTS generates diverse samples, and it is surprisingly robust to out-of-domain text inputs.
 
-The inferior performance of E1 TTS$_\text{ODE}$ requires further investigation.
-SimpleSpeech~\cite{SimpleSpeech} observed poor sample quality when training a similar model on the LibriTTS dataset, indicating that the quantity of training data plays a crucial role.
-SESD~\cite{SimpleTTS2}~highlighted the significance of the noise schedule~\cite{NoiseScheduleBlog} in diffusion training and inference.
+The inferior performance of ***E1 TTS***$_\text{ODE}$ requires further investigation.
+SimpleSpeech[^10] observed poor sample quality when training a similar model on the LibriTTS dataset, indicating that the quantity of training data plays a crucial role.
+SESD[^09]~highlighted the significance of the noise schedule[^45] in diffusion training and inference.
 The mode-seeking reverse KL divergence used in DMD may also contribute to the superior performance of E1~TTS$_\text{DMD}$, as it prioritizes sample correctness over distribution coverage, which aligns better with human perception.
 
 </td><td>
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^01]: TTSSurvey
+[^02]: [DeepVoice](../System/2017.02.25_DeepVoice.md)
+[^03]: [FastPitch](../Acoustic/2020.06.11_FastPitch.md)
+[^04]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
+[^05]: VARA-TTS
+[^06]: [Flow-TTS](../Acoustic/2020.04.09_Flow-TTS.md)
+[^07]: ScoreSDE
+[^08]: [E3 TTS](2023.11.02_E3_TTS.md)
+[^09]: [SESD](2024.09.01_SESD.md)
+[^10]: [SimpleSpeech](2024.06.04_SimpleSpeech.md)
+[^11]: [E2 TTS](2024.06.26_E2_TTS.md)
+[^12]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
+[^13]: [DiTTo-TTS](2024.06.17_DiTTo-TTS.md)
+[^14]: Mapache
+[^15]: [YourTTS](../E2E/2021.12.04_YourTTS.md)
+[^16]: BlogDistillation
+[^17]: ProDiff
+[^18]: ProgressiveDistillation
+[^19]: [CoMoSpeech](2023.05.11_CoMoSpeech.md)
+[^20]: [FlashSpeech](2024.04.23_FlashSpeech.md)
+[^21]: ConsistencyModel
+[^22]: [VoiceFlow](2023.09.10_VoiceFlow.md)
+[^23]: [ReFlow-TTS](../Flow/2023.09.29_ReFlow-TTS.md)
+[^24]: RectifiedFlow
+[^25]: DiffInstruct
+[^26]: DMD2
+[^27]: VSD
+[^28]: LCMLoRA
+[^29]: InnateOneStep
+[^30]: [GAN](../_Basis/2014.06.10_GAN.md)
+[^31]: [ARDiT](2024.06.08_ARDiT.md)
+[^32]: [DiT](2022.12.19_DiT.md)
+[^33]: [Roformer](../_Transformer/2021.04.20_RoFormer.md)
+[^34]: [ParaNet](../Acoustic/2019.05.21_ParaNet.md)
+[^35]: [Voicebox](2023.06.23_Voicebox.md)
+[^36]: RAD-TTS
+[^37]: DiffVoice
+[^38]: [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
+[^39]: [BigVGAN](../Vocoder/2022.06.09_BigVGAN.md)
+[^40]: EDM2
+[^41]: TTUR
+[^42]: [UniCATS](2023.06.13_UniCATS.md)
+[^43]: [StyleTTS2](../SpeechLM/2023.06.13_StyleTTS2.md)
+[^44]: [CosyVoice](../SpeechLM/ST2S/2024.07.07_CosyVoice.md)
+[^45]: [ELLA-V](../SpeechLM/ST2S/2024.01.14_ELLA-V.md)
+[^46]: [VITS](../E2E/2021.06.11_VITS.md)
+[^47]: NoiseScheduleBlog
