添加 VALL-T 相关工作

--- a/Models/SpeechLM/ST2S/2024.01.25_VALL-T.md
+++ b/Models/SpeechLM/ST2S/2024.01.25_VALL-T.md
@@ -89,6 +89,19 @@ VALL-T presents several advantages compared to previous TTS models:
 
 <table><tr><td width="50%">
 
+The Transducer model \cite{transducer}, also known as RNN-T, is designed for monotonic sequence-to-sequence tasks and comprises three components: an encoder, a prediction network, and a joint network.
+Here, the prediction network is an auto-regressive network, such as RNN and LSTM.
+Transducer model also introduces a special output token called blank, denoted as $\varnothing$, which signifies the alignment boundary between output and input sequence.
+We define $\mathcal{Y}$ as the vocabulary of output tokens and $\bar{\mathcal{Y}}=\mathcal{Y}\cup \{\varnothing\}$ as the extended vocabulary.
+Also, we denote the lengths of the input sequence $\bm{x}$ and output sequence $\bm{y}$ as $T$ and $U$ and the size of the extended vocabulary $\bar{\mathcal{Y}}$ as $\bar{V}$.
+
+In the training phase, the encoder and prediction network encode the two sequences $\bm{x}$ and $\bm{y}$ respectively, yielding encoded hidden sequences $\bm{f}$ and $\bm{g}$.
+Then the joint network combines $\bm{f}$ and $\bm{g}$ at all possible positions to predict the corresponding next output token, constructing an alignment grid.
+Each path $\bar{\bm{y}}$ from the bottom left corner to the top right corner of the grid represents an alignment between $\bm{x}$ and $\bm{y}$, with a length of $T+U$.
+The training criterion of Transducer model is to maximize the probability of $\mathbf{Pr}(\bm{y}|\bm{x})$, which is the summation of the probabilities of all possible alignment paths $\bar{\bm{y}}$.
+
+In the inference phase, the prediction network auto-regressively predicts the next token, conditioning on the sliced input hidden vectors that slide from $\bm{f}_0$ to $\bm{f}_{T-1}$ whenever the blank token $\varnothing$ emerges.
+
 </td><td>
 
 </td></tr></table>
